--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public
+<%# Copyright 2011-2019 Rice University. Licensed under the Affero General Public
     License version 3 or later.  See the COPYRIGHT file for details. %>
 
 <!DOCTYPE html>
@@ -22,19 +22,19 @@
 
   <body>
 
-    <%= render :partial => "layouts/application_js_hooks" %>
+    <%= render partial: "layouts/application_js_hooks" %>
 
     <%= render "shared/upper_corner_console" %>
 
     <div id="application-container">
 
-      <%= render :partial => "layouts/application_header" %>
+      <%= render partial: "layouts/application_header" %>
 
-      <%= render :partial => "layouts/application_body" %>
+      <%= render partial: "layouts/application_body" %>
 
-      <%= render :partial => "layouts/application_bottom_nav" %>
+      <%= render partial: "layouts/application_bottom_nav" %>
 
-      <%= render :partial => "layouts/application_footer" %>
+      <%= render partial: "layouts/application_footer" %>
 
     </div>
 
