--- a/app/views/layouts/application_home_page.html.erb
+++ b/app/views/layouts/application_home_page.html.erb
@@ -1,4 +1,4 @@
-<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public 
+<%# Copyright 2011-2019 Rice University. Licensed under the Affero General Public
     License version 3 or later.  See the COPYRIGHT file for details. %>
 
 <% top_nav_home_page_background %>
@@ -19,9 +19,9 @@
   <div id="application-home-page-create">
     <h3>Create</h3>
     <p>Contribute free-form, multiple choice, matching,<br/>true or false and more exercises in any subject area!</p>
-    <%= link_to "Write an exercise >", nil, :class => 'link_button' %>    
+    <%= link_to "Write an exercise >", nil, :class => 'link_button' %>
   </div>
-  
+
   <div id="application-home-page-use" class='application-home-page-right-box'>
     <h3>Use</h3>
     <p>Easily use exercises in tests and homeworks, or embed in your online learning platform.</p>
@@ -45,4 +45,4 @@
 
 <% end %>
 
-<%= render :template => "layouts/application" %>
+<%= render template: "layouts/application" %>
