--- a/app/views/layouts/application_body_only.html.erb
+++ b/app/views/layouts/application_body_only.html.erb
@@ -1,4 +1,4 @@
-<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public 
+<%# Copyright 2011-2019 Rice University. Licensed under the Affero General Public
     License version 3 or later.  See the COPYRIGHT file for details. %>
 
 <% content_for :application_body do %>
@@ -30,4 +30,4 @@
 
 <% end %>
 
-<%= render :template => "layouts/application" %>
+<%= render template: "layouts/application" %>
