Switched the rest of the ACL to delegations and fixed some specs

--- a/app/views/admin/delegations/_form.html.erb
+++ b/app/views/admin/delegations/_form.html.erb
@@ -63,12 +63,7 @@
   <br>
 
   <%= form.check_box :can_update %>
-  <%= form.label :can_update, "Update Delegator's drafts and publications" %>
-
-  <br>
-
-  <%= form.check_box :can_destroy %>
-  <%= form.label :can_destroy, "Delete Delegator's drafts" %>
+  <%= form.label :can_update, "Update/Delete Delegator's drafts and create new versions" %>
 
   <br><br>
 
