--- a/app/views/admin/delegations/index.html.erb
+++ b/app/views/admin/delegations/index.html.erb
@@ -4,9 +4,9 @@
     records: @delegations,
     list: {
       headings: [
-        'Delegator', 'Delegate', 'Author?', 'Copy?', 'Read?', 'Update?', 'Delete?', 'Actions'
+        'Delegator', 'Delegate', 'Author?', 'Copy?', 'Read?', 'Update/Delete?', 'Actions'
       ],
-      widths: [ '30%', '30%', '5%', '5%', '5%', '5%', '5%', '15%' ],
+      widths: [ '30%', '30%', '5%', '5%', '5%', '5%', '20%' ],
       data_procs: [
         ->(delegation) { delegation.delegator.name },
         ->(delegation) { delegation.delegate.name },
@@ -14,7 +14,6 @@
         ->(delegation) { yn(delegation.can_assign_copyright) },
         ->(delegation) { yn(delegation.can_read) },
         ->(delegation) { yn(delegation.can_update) },
-        ->(delegation) { yn(delegation.can_destroy) },
         ->(delegation) do
           link_to(
             edit_admin_delegation_url(delegation)
