Removed routing and view specs; Transformed controller specs into request specs

--- a/app/views/doorkeeper/authorizations/new.html.erb
+++ b/app/views/doorkeeper/authorizations/new.html.erb
@@ -20,7 +20,7 @@
   <% end %>
 
   <div class="actions">
-    <%= form_tag oauth_authorization_path, method: :post do %>
+    <%= form_tag oauth_authorization_url, method: :post do %>
       <%= hidden_field_tag :client_id, @pre_auth.client.uid %>
       <%= hidden_field_tag :redirect_uri, @pre_auth.redirect_uri %>
       <%= hidden_field_tag :state, @pre_auth.state %>
@@ -28,7 +28,7 @@
       <%= hidden_field_tag :scope, @pre_auth.scope %>
       <%= submit_tag "Authorize", class: "btn btn-success btn-lg btn-block" %>
     <% end %>
-    <%= form_tag oauth_authorization_path, method: :delete do %>
+    <%= form_tag oauth_authorization_url, method: :delete do %>
       <%= hidden_field_tag :client_id, @pre_auth.client.uid %>
       <%= hidden_field_tag :redirect_uri, @pre_auth.redirect_uri %>
       <%= hidden_field_tag :state, @pre_auth.state %>
