--- a/app/views/layouts/_application_bottom_nav.html.erb
+++ b/app/views/layouts/_application_bottom_nav.html.erb
@@ -3,22 +3,22 @@
 
     <div id="bottom-nav-links">
 <% if false %>
-      <%= link_to "Terms of Use", main_app.terms_path %>
+      <%= link_to "Terms of Use", main_app.terms_url %>
       <%= image_tag "links_dash.png" %>
 
-      <%= link_to "Privacy Policy", main_app.privacy_path %>
+      <%= link_to "Privacy Policy", main_app.privacy_url %>
       <%= image_tag "links_dash.png" %>
 
-      <%= link_to "Publishing Agreement", main_app.publishing_path %>
+      <%= link_to "Publishing Agreement", main_app.publishing_url %>
       <%= image_tag "links_dash.png" %>
 
-      <%= link_to "About", main_app.about_path %>
+      <%= link_to "About", main_app.about_url %>
       <%= image_tag "links_dash.png" %>
 
-      <%= link_to "Developers", main_app.developers_path %>
+      <%= link_to "Developers", main_app.developers_url %>
       <%= image_tag "links_dash.png" %>
 
-      <%= link_to "Contact Us", main_app.contact_path %>
+      <%= link_to "Contact Us", main_app.contact_url %>
 <% end %>
     </div>
 
