--- a/app/views/layouts/_application_footer.html.erb
+++ b/app/views/layouts/_application_footer.html.erb
@@ -11,7 +11,9 @@
     </div>
 
     <div id="footer-copyright">
-      <%= link_to OpenStax::Utilities::Text.copyright('2013', COPYRIGHT_HOLDER), main_app.copyright_path %>
+      <%= link_to(
+        OpenStax::Utilities::Text.copyright('2013', COPYRIGHT_HOLDER), main_app.copyright_url
+      ) %>
  <% if false %>
       <br/>
 
