--- a/app/views/layouts/_application_header.html.erb
+++ b/app/views/layouts/_application_header.html.erb
@@ -10,7 +10,7 @@
     <%= render partial: "layouts/application_account_bar", locals: { icon_color: "white" } %>
 
     <div id="application-header-logo">
-      <a href="<%= main_app.root_path %>" id="application-header-logo-link"></a>
+      <a href="<%= main_app.root_url %>" id="application-header-logo-link"></a>
     </div>
 
   </div>
