--- a/app/views/shared/_upper_corner_console.html.erb
+++ b/app/views/shared/_upper_corner_console.html.erb
@@ -2,9 +2,9 @@
 
   <% if !Rails.env.production? %>
     Current user: <%= current_user.name %><br/>
-    <%= link_to "Dev Console", main_app.admin_path, remote: true %><br/>
+    <%= link_to "Dev Console", main_app.admin_url, remote: true %><br/>
   <% elsif current_user.is_administrator? %>
-    <%= link_to "Admin Console", main_app.admin_path, remote: true %><br/>
+    <%= link_to "Admin Console", main_app.admin_url, remote: true %><br/>
   <% end %>
 
   <% clock_is_normally_enabled = @clock_enabled && signed_in? %>
