--- a/app/views/admin/users/_index.html.erb
+++ b/app/views/admin/users/_index.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'openstax/accounts/shared/accounts/search',
-           locals: { search_action_path: admin_users_path,
+           locals: { search_action_path: admin_users_url,
                      method: :get,
                      remote: true } %>
 
