--- a/app/views/doorkeeper/applications/index.html.erb
+++ b/app/views/doorkeeper/applications/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <% if current_user.is_administrator? %>
-  <p><%= link_to 'New Application', new_oauth_application_path, class: 'btn btn-success' %></p>
+  <p><%= link_to 'New Application', new_oauth_application_url, class: 'btn btn-success' %></p>
 <% end %>
 
 <table class="table table-striped">
@@ -18,9 +18,9 @@
   <tbody>
   <% @applications.each do |application| %>
     <tr id="application_<%= application.id %>">
-      <td><%= link_to application.name, oauth_application_path(application) %></td>
+      <td><%= link_to application.name, oauth_application_url(application) %></td>
       <td><%= application.redirect_uri %></td>
-      <td><%= link_to 'Edit', edit_oauth_application_path(application), class: 'btn btn-link' %></td>
+      <td><%= link_to 'Edit', edit_oauth_application_url(application), class: 'btn btn-link' %></td>
       <td><%= render 'delete_form', application: application %></td>
     </tr>
   <% end %>
