Removed TrustedApplications (dead code)

--- a/app/views/admin/console/index.js.erb
+++ b/app/views/admin/console/index.js.erb
@@ -1,4 +1,3 @@
 Exercises.Ui.renderAndOpenDialog(
-  'admin_console_dialog',
-  '<%= j(render partial: "admin/console/index") %>'
+  'admin_console_dialog', '<%= j(render partial: "admin/console/index") %>'
 );
