--- a/app/views/admin/administrators/index.html.erb
+++ b/app/views/admin/administrators/index.html.erb
@@ -1,6 +1,6 @@
 <h4>Administrators</h4>
   <%= render partial: 'shared/users/index', locals: {
-    users: @administrators.map {|a| a.user},
+    users: @administrators.map(&:user),
     action_partial: 'admin/administrators/destroy',
     sign_in_as: true
   } %>
