Removed duplicate delegations from publications and improved delegation form label

--- a/app/views/admin/delegations/_form.html.erb
+++ b/app/views/admin/delegations/_form.html.erb
@@ -39,7 +39,7 @@
   <br>
 
   <%= form.check_box :can_read %>
-  <%= form.label :can_read, "Read Delegator's drafts" %>
+  <%= form.label :can_read, "Read Delegator's drafts and solutions" %>
 
   <br>
 
