--- a/app/views/admin/delegations/_form.html.erb
+++ b/app/views/admin/delegations/_form.html.erb
@@ -69,10 +69,7 @@
 <div class='form-inline'>
   <%=
     render partial: 'openstax/accounts/shared/accounts/search', locals: {
-      search_action_path: users_admin_delegations_url,
-      action_partial: 'admin/delegations/actions',
-      action_heading: 'Make',
-      remote: true
+      search_action_path: users_admin_delegations_url, remote: true
     }
   %>
 </div>
