--- a/app/views/admin/console/_manage.html.erb
+++ b/app/views/admin/console/_manage.html.erb
@@ -13,6 +13,10 @@
 
   <br><br>
 
+  <li><%= link_to "Publications", admin_publications_url %></li>
+
+  <br><br>
+
   <li><%= link_to "Site Terms", fine_print.root_url %></li>
   <li><%= link_to "Content Licenses", admin_licenses_url %></li>
 </ul>
