--- a/app/views/dev/users/_index.html.erb
+++ b/app/views/dev/users/_index.html.erb
@@ -35,7 +35,7 @@
     <div class='form-group'>
         <label class='col-sm-3 control-label'>Administrator?</label>
         <div class=' col-sm-9'>
-          <%= f.check_box :administrator %>
+          <%= f.check_box :is_administrator %>
         </div>
     </div>
     <div class='form-group'>
