--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -8,11 +8,11 @@
       background-color: white;
       border: 1px solid  $os_light_gray;
       padding: 15px;
-      @include border-radius(5px);
+      border-radius: 5px;
 
       a.btn-sm {
         color: white;
-        @include border-radius(0px);  
+        border-radius: 0px;
         float: right;
         display: none; 
         margin-top: -4px;
