--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -27,7 +27,7 @@
 button.standard, input[type='submit'].standard {
   @extend .btn;
   @extend .btn-primary;
-  @include border-radius(0px);
+  border-radius: 0;
   &:hover, &:focus {
     color: white;
   }
