--- a/app/views/admin/console/_manage.html.erb
+++ b/app/views/admin/console/_manage.html.erb
@@ -19,4 +19,6 @@
 
   <li><%= link_to "Site Terms", fine_print.root_url %></li>
   <li><%= link_to "Content Licenses", admin_licenses_url %></li>
+
+  <li><%= link_to "Invalid Exercises", invalid_admin_exercises_url %></li>
 </ul>
